Sat Aug 27 18:53:51 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* proc.c (proc_new): force to rewrite errinfo when calling Proc.new in ensure.
	  [Bug #5234] [ruby-core:39125]
	  This code will be removed after changing throw mechanism (see r33064).

	* vm.c (rb_vm_rewrite_dfp_in_errinfo): new function.

	* vm.c (vm_make_env_each): changed accordingly.

	* vm_core.h: ditto.

	* bootstraptest/test_flow.rb: add tests for above.

Sat Aug 27 18:44:06 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* internal.h (rb_strftime_timespec): move to time.c because it depends
	  encoding.h.

Sat Aug 27 18:17:58 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): get enc argument to specify
	  the encoding of the format. On Windows (at least Japanese Windows),
	  Time#strftime("%Z") includes non ASCII in locale encoding (CP932).
	  So convert locale to default internal. [ruby-core:39092] [Bug #5226]

	* strftime.c (rb_strftime): ditto.

	* strftime.c (rb_strftime_timespec): ditto.

	* internal.h (rb_strftime_timespec): follow above.

	* time.c (rb_strftime_alloc): ditto.

	* time.c (strftimev): ditto.

	* time.c (time_strftime): ditto.

	* time.c (time_to_s): the resulted string of Time#to_s is always
	  ascii only, so this should be US-ASCII.

	* time.c (time_asctime): ditto.

Sat Aug 27 11:18:12 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* Revert r33078. It caused a Rails application NoMethodError.

	  /home/nahi/git/emptyApp/ruby/1.9.1/gems/rack-mount-0.6.14/lib/rack/mount/utils.rb:157: warning: toplevel constant ScanError referenced by Regin::Parser::ScanError
	  /home/nahi/git/emptyApp/ruby/1.9.1/gems/rack-mount-0.6.14/lib/rack/mount/vendor/regin/regin/parser.rb:17:in `parse_regexp': undefined method `scan_str' for #<Regin::Parser:0x00000002344548> (NoMethodError)

Sat Aug 27 08:44:58 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Import RDoc 3.9.4.  Typo and grammar fixes by Luke Gruber.
	  [Ruby 1.9 - Bug #5203]
