@@ -16,9 +16,6 @@
 #include "ruby/encoding.h"
 #include "internal.h"
 
-/* strftime.c */
-size_t rb_strftime_timespec(char *s, size_t maxsize, const char *format, rb_encoding *enc, const struct vtm *vtm, struct timespec *ts, int gmt);
-
 #ifdef HAVE_UNISTD_H
 #include <unistd.h>
 #endif
@@ -4285,10 +4282,6 @@ time_to_a(VALUE time)
 		    tobj->vtm.isdst?Qtrue:Qfalse,
 		    time_zone(time));
 }
-
-size_t
-rb_strftime(char *s, size_t maxsize, const char *format, rb_encoding *enc,
-            const struct vtm *vtm, VALUE timev, int gmt);
 
 #define SMALLBUF 100
 static size_t
